--- a/Css/Global.css
+++ b/Css/Global.css
@@ -31,7 +31,7 @@ header {
     display: flex;
     width: 100%;
     height: 25vh;
-    background-image: url("Photo/Rrestaurant.png");
+    background-image: url("./Photo/Rrestaurant.png");
     border-radius: 30px;
     background-position: bottom;
     background-size: cover;
@@ -398,7 +398,7 @@ footer {
         padding-top: 7%;
     }
     .button-value:nth-child(1) {
-        /**padding-bottom: 30px;**/
+        padding-bottom: 30px;
         height: 90px;
     }
     .footer-col {
