--- a/Css/Global.css
+++ b/Css/Global.css
@@ -31,7 +31,7 @@ header {
     display: flex;
     width: 100%;
     height: 25vh;
-    background-image: url("./Photo/Rrestaurant.png");
+    background-image: url("https://github.com/idk49780749/kioes-wahyu-web-project/Photo/Rrestaurant.png");
     border-radius: 30px;
     background-position: bottom;
     background-size: cover;
